<resources>
    <string name="app_name">FoodApp</string>
    <string name="fried_shrimp">Fried Shrimp</string>
    <string name="_4_5">4.5</string>
    <string name="_20_min">20 min</string>
    <string name="_29_00">$29.00</string>
    <string name="dish_descripton">dish_descripton</string>
    <string name="good_morning">Good morning</string>
    <string name="shania_fraser">Shania fraser</string>
    <string name="find_your_dishes">Find your dishes</string>
    <string name="categories">Categories</string>
    <string name="all">All</string>
    <string name="new_dishes">New Dishes</string>
    <string name="burger">Burger</string>
    <string name="_150_kcal">150 kcal</string>
    <string name="broccoli">Broccoli</string>
    <string name="ingredients">Ingredients</string>
    <string name="_7_items">7 items</string>
    <string name="price">Price</string>
</resources>