<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="20dp"
    android:background="@drawable/grid_bg"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/dish_img"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:contentDescription="@string/dish_descripton"
        android:src="@drawable/dish1_img" />

    <TextView
        android:id="@+id/dish_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fried_shrimp"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_star"
            android:drawablePadding="8dp"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/grid_textColor"
            android:text="@string/_4_5"/>
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_stopwatch"
            android:drawablePadding="8dp"
            android:textColor="@color/grid_textColor"
            android:text="@string/_20_min"/>
    </LinearLayout>
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryColor_local"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginVertical="8dp"
        android:text="@string/_29_00"/>
</LinearLayout>