<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    tools:context=".MainActivity">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/good_morning"
        android:textColor="@color/grid_textColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shania_fraser"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_profile"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome" />

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="25dp"
        android:background="@drawable/view_bg"
        android:hint="@string/find_your_dishes"
        android:textColorHint="@color/grid_textColor"
        android:padding="20dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableEndCompat="@drawable/filter"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:text="@string/categories"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <TextView
        android:id="@+id/all1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:drawablePadding="8dp"
        app:drawableEndCompat="@drawable/ic_forward"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/categories"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories"
        />

    <TextView
        android:id="@+id/newDishes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_dishes"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryRecyclerView" />

    <TextView
        android:id="@+id/all2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:drawablePadding="8dp"
        app:drawableEndCompat="@drawable/ic_forward"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/newDishes"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerGridView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newDishes" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bg"
        app:itemIconSize="40dp"
        app:itemIconTint="@drawable/item_state_selector"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>