<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    tools:context=".DishPage">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle" />

    <View
        android:id="@+id/item_smoke"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_item_smoke" />

    <ImageView
        android:id="@+id/item_mid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_item_mid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_item_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_item_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:padding="20dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:padding="20dp"
        android:src="@drawable/vc_heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/item_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/bg_item_dish"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:src="@drawable/dish1_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <TextView
        android:id="@+id/dish_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/fried_shrimp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/details"
        app:layout_constraintStart_toStartOf="@id/details"
        app:layout_constraintTop_toBottomOf="@+id/dish" />

    <TextView
        android:id="@+id/dish_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="center"
        android:text="@string/dish_descripton"
        android:textColor="@color/grid_textColor"
        android:textSize="18sp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dish_name" />

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dish_description">

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/_4_5"
            android:textColor="@color/grid_textColor"
            android:textSize="17sp"
            app:drawableStartCompat="@drawable/ic_star_big" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:drawablePadding="8dp"
            android:text="@string/_20_min"
            android:textColor="@color/grid_textColor"
            android:textSize="17sp"
            app:drawableStartCompat="@drawable/ic_stopwatch_big" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/_150_kcal"
            android:textColor="@color/grid_textColor"
            android:textSize="17sp"
            app:drawableStartCompat="@drawable/ic_calori" />
    </LinearLayout>

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginVertical="8dp"

        app:layout_constraintBottom_toTopOf="@+id/ingredientRecycleView"
        app:layout_constraintStart_toStartOf="@id/ingredientRecycleView" />

    <TextView
        android:id="@+id/ingredientCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/_7_items"
        android:textColor="@color/grid_textColor"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/ingredientRecycleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ingredients" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintVertical_chainStyle="packed"

            app:layout_constraintBottom_toTopOf="@+id/priceTitle"
            app:layout_constraintTop_toBottomOf="@+id/details" />


    <TextView
        android:id="@+id/priceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/grid_textColor"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredientRecycleView" />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_29_00"
        android:textColor="@color/primaryColor_local"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/add_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceTitle" />
    <ImageView
        android:id="@+id/add_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_add"
        app:layout_constraintBottom_toBottomOf="parent " />
    <ImageView
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_add"
        android:padding="25dp"
        app:layout_constraintTop_toTopOf="@+id/add_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>